applications/hub/upstream/options/ui/overlays/istio/authorization-policy-ui.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: model-registry-ui
  labels:
    app: model-registry-ui
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: model-registry-ui
